# project-1

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CarColour.h  CarWheels.h  README.md  build.bat  build.sh  projekt.cpp  raport.md  sprawozdanie(beta).txt
Source/: CarEngine.h  CarModel.h  Editor.h  main.cc
Source/Base/Types/: BaseTypes.h
data/: config  models
docs/: Sprawozdanie.md
resources/: ToyotaCamry  configs  engines.csv  features.csv  models  models.csv
resources/models/: ToyotaCorolla  toyota
src/: car_colour.cpp  car_colour.hpp  car_component.cpp  car_component.hpp  car_config.cpp  car_config.hpp  car_drive.cpp  car_drive.hpp  car_engine.cpp  car_engine.hpp  car_feature.hpp  car_gear.cpp  car_gear.hpp  car_model.cpp  car_model.hpp  components.cpp  components.hpp  main.cc  main.cpp  program.cpp  program.hpp
src/components/: car_color.cpp  car_color.hpp  car_component.hpp  car_engine.cpp  car_engine.hpp  car_model.cpp  car_model.hpp  car_wheels.cpp  car_wheels.hpp
